--- a/index.html
+++ b/index.html
@@ -1,79 +1,159 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Rssify : A Google App Engine app to convert web pages to RSS feeds">
+    <title>Rssify by gianlucaborello</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Rssify</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Rssify</h1>
+        <p>A Google App Engine app to convert web pages to RSS feeds</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/gianlucaborello/rssify">View on GitHub</a>
+        <p class="view"><a href="https://github.com/gianlucaborello/rssify">View the Project on GitHub <small>gianlucaborello/rssify</small></a></p>
 
-          <h1 id="project_title">Rssify</h1>
-          <h2 id="project_tagline">A Google App Engine app to convert web pages to RSS feeds</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/gianlucaborello/rssify/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/gianlucaborello/rssify/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+        <ul>
+          <li><a href="https://github.com/gianlucaborello/rssify/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/gianlucaborello/rssify/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/gianlucaborello/rssify">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h1>
+<a name="rssify" class="anchor" href="#rssify"><span class="octicon octicon-link"></span></a>rssify</h1>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<p>A simple application that I needed to avoid constantly checking my favorite news websites/forums.</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>It automatically scrapes (every 30 minutes) various web pages (currently Hacker News, Ask Hacker News, Show Hacker News and Bogleheads.org) and emits an RSS including the items that have more comments than the threshold I choose.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>When paired with feedly and feedburner, I have a consolidated view of everything, most background noise is filtered out and if I don't log in for a few days items will still pile up so I don't lose content.</p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>The app is hosted on GAE, so in case you want to use the feeds yourself, here they are (please use the feedburner ones so I can keep this running in the free tier):</p>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<table>
+<thead><tr>
+<th>Hacker News, by points</th>
+<th>Link</th>
+</tr></thead>
+<tbody>
+<tr>
+<td>HN items reaching 10 points</td>
+<td><a href="http://feeds.feedburner.com/hn10points"><img src="http://feeds.feedburner.com/%7Efc/hn10points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="hn10points"></a></td>
+</tr>
+<tr>
+<td>HN items reaching 50 points</td>
+<td><a href="http://feeds.feedburner.com/hn50points"><img src="http://feeds.feedburner.com/%7Efc/hn50points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="hn50points"></a></td>
+</tr>
+<tr>
+<td>HN items reaching 100 points</td>
+<td><a href="http://feeds.feedburner.com/hn100points"><img src="http://feeds.feedburner.com/%7Efc/hn100points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="hn100points"></a></td>
+</tr>
+<tr>
+<td>Ask HN items reaching 10 points</td>
+<td><a href="http://feeds.feedburner.com/askhn10points"><img src="http://feeds.feedburner.com/%7Efc/askhn10points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="askhn10points"></a></td>
+</tr>
+<tr>
+<td>Ask HN items reaching 50 points</td>
+<td><a href="http://feeds.feedburner.com/askhn50points"><img src="http://feeds.feedburner.com/%7Efc/askhn50points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="askhn50points"></a></td>
+</tr>
+<tr>
+<td>Ask HN items reaching 100 points</td>
+<td><a href="http://feeds.feedburner.com/askhn100points"><img src="http://feeds.feedburner.com/%7Efc/askhn100points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="askhn100points"></a></td>
+</tr>
+<tr>
+<td>Show HN items reaching 10 points</td>
+<td><a href="http://feeds.feedburner.com/showhn10points"><img src="http://feeds.feedburner.com/%7Efc/showhn10points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="showhn10points"></a></td>
+</tr>
+<tr>
+<td>Show HN items reaching 50 points</td>
+<td><a href="http://feeds.feedburner.com/showhn50points"><img src="http://feeds.feedburner.com/%7Efc/showhn50points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="showhn50points"></a></td>
+</tr>
+<tr>
+<td>Show HN items reaching 100 points</td>
+<td><a href="http://feeds.feedburner.com/showhn100points"><img src="http://feeds.feedburner.com/%7Efc/showhn100points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="showhn100points"></a></td>
+</tr>
+</tbody>
+</table><table>
+<thead><tr>
+<th>Hacker News, by comments</th>
+<th>link</th>
+</tr></thead>
+<tbody>
+<tr>
+<td>HN items reaching 10 comments</td>
+<td><a href="http://feeds.feedburner.com/hn10comments"><img src="http://feeds.feedburner.com/%7Efc/hn10comments?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="hn10comments"></a></td>
+</tr>
+<tr>
+<td>HN items reaching 50 comments</td>
+<td><a href="http://feeds.feedburner.com/hn50comments"><img src="http://feeds.feedburner.com/%7Efc/hn50comments?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="hn50comments"></a></td>
+</tr>
+<tr>
+<td>HN items reaching 100 comments</td>
+<td><a href="http://feeds.feedburner.com/hn100comments"><img src="http://feeds.feedburner.com/%7Efc/hn100comments?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="hn100comments"></a></td>
+</tr>
+<tr>
+<td>Ask HN items reaching 10 comments</td>
+<td><a href="http://feeds.feedburner.com/askhn10comments"><img src="http://feeds.feedburner.com/%7Efc/askhn10comments?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="askhn10comments"></a></td>
+</tr>
+<tr>
+<td>Ask HN items reaching 50 comments</td>
+<td><a href="http://feeds.feedburner.com/askhn50comments"><img src="http://feeds.feedburner.com/%7Efc/askhn50comments?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="askhn50comments"></a></td>
+</tr>
+<tr>
+<td>Ask HN items reaching 100 comments</td>
+<td><a href="http://feeds.feedburner.com/askhn100comments"><img src="http://feeds.feedburner.com/%7Efc/askhn100comments?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="askhn100comments"></a></td>
+</tr>
+<tr>
+<td>Show HN items reaching 10 comments</td>
+<td><a href="http://feeds.feedburner.com/showhn10comments"><img src="http://feeds.feedburner.com/%7Efc/showhn10comments?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="showhn10comments"></a></td>
+</tr>
+<tr>
+<td>Show HN items reaching 50 comments</td>
+<td><a href="http://feeds.feedburner.com/showhn50comments"><img src="http://feeds.feedburner.com/%7Efc/showhn50comments?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="showhn50comments"></a></td>
+</tr>
+<tr>
+<td>Show HN items reaching 100 comments</td>
+<td><a href="http://feeds.feedburner.com/showhn100comments"><img src="http://feeds.feedburner.com/%7Efc/showhn100comments?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="showhn100comments"></a></td>
+</tr>
+</tbody>
+</table><table>
+<thead><tr>
+<th>Bogleheads.org</th>
+<th>Link</th>
+</tr></thead>
+<tbody>
+<tr>
+<td>Posts reaching 10 comments</td>
+<td><a href="http://feeds.feedburner.com/bogleheads10"><img src="http://feeds.feedburner.com/%7Efc/bogleheads10?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="bogleheads10"></a></td>
+</tr>
+<tr>
+<td>Posts reaching 50 comments</td>
+<td><a href="http://feeds.feedburner.com/bogleheads50"><img src="http://feeds.feedburner.com/%7Efc/bogleheads50?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="bogleheads50"></a></td>
+</tr>
+<tr>
+<td>Posts reaching 100 comments)</td>
+<td><a href="http://feeds.feedburner.com/bogleheads100"><img src="http://feeds.feedburner.com/%7Efc/bogleheads100?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="bogleheads100"></a></td>
+</tr>
+</tbody>
+</table><p>It served as a demo project on using Java on GAE, since I've never done it before. Data is saved by a background worker into the NoSQL Google database, and read from there.</p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>I pulled this off in a very short time so there are tons of bugs, but it works well enough for my use case.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Rssify maintained by <a href="https://github.com/gianlucaborello">gianlucaborello</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/gianlucaborello">gianlucaborello</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
