Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
         </ul>
       </header>
       <section>
-        <h1>
-<a name="rssify" class="anchor" href="#rssify"><span class="octicon octicon-link"></span></a>rssify</h1>
-
-<p>A simple application that I needed to avoid constantly checking my favorite news websites/forums.</p>
+        <p>A simple application that I needed to avoid constantly checking my favorite news websites/forums.</p>
 
 <p>It automatically scrapes (every 30 minutes) various web pages (currently Hacker News, Ask Hacker News, Show Hacker News and Bogleheads.org) and emits an RSS including the items that have more comments than the threshold I choose.</p>
 
@@ -41,7 +38,7 @@
 
 <table>
 <thead><tr>
-<th>Hacker News, by points</th>
+<th>Hacker News (by points)</th>
 <th>Link</th>
 </tr></thead>
 <tbody>
@@ -84,7 +81,7 @@
 </tbody>
 </table><table>
 <thead><tr>
-<th>Hacker News, by comments</th>
+<th>Hacker News (by comments)</th>
 <th>link</th>
 </tr></thead>
 <tbody>
