Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <td><a href="http://feeds.feedburner.com/bogleheads50"><img src="http://feeds.feedburner.com/%7Efc/bogleheads50?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="bogleheads50"></a></td>
 </tr>
 <tr>
-<td>Posts reaching 100 comments)</td>
+<td>Posts reaching 100 comments</td>
 <td><a href="http://feeds.feedburner.com/bogleheads100"><img src="http://feeds.feedburner.com/%7Efc/bogleheads100?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="bogleheads100"></a></td>
 </tr>
 </tbody>
