--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Rssify by gianlucaborello</title>
+    <title>RSSify by gianlucaborello</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Rssify</h1>
-        <p>A Google App Engine app to convert web pages to RSS feeds</p>
+        <h1>RSSify</h1>
+        <p>Convert web pages to RSS feeds</p>
 
         <p class="view"><a href="https://github.com/gianlucaborello/rssify">View the Project on GitHub <small>gianlucaborello/rssify</small></a></p>
 
