Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>RSSify</h1>
-        <p>Convert web pages to RSS feeds</p>
+        <p>Hacker News RSS feeds</p>
 
         <p class="view"><a href="https://github.com/gianlucaborello/rssify">View the Project on GitHub <small>gianlucaborello/rssify</small></a></p>
 
@@ -28,13 +28,9 @@
         </ul>
       </header>
       <section>
-        <p>A simple application that I needed to avoid constantly checking my favorite news websites/forums.</p>
+        <p>RSS feeds for Hacker News, Ask Hacker News, Show Hacker News and Bogleheads.org.</p>
 
-<p>It automatically scrapes (every 30 minutes) various web pages (currently Hacker News, Ask Hacker News, Show Hacker News and Bogleheads.org) and emits various RSS feeds with the items that have a "score" bigger than a set threshold.</p>
-
-<p>This way I have a consolidated view of everything, background noise is filtered out and I don't risk losing content.</p>
-
-<p>The app is hosted on GAE, and in case you want to use the feeds yourself, here they are (please use the feedburner ones so I can keep this running in the free tier):</p>
+<p>Content is automatically scraped every 30 minutes. The app is hosted on GAE, and in case you want to use the feeds yourself, here they are (please use the feedburner ones so I can keep this running in the free tier):</p>
 
 <table>
 <thead><tr>
