--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section>
         <p>RSS feeds for Hacker News, Ask Hacker News, Show Hacker News and Bogleheads.org.</p>
 
-<p>Content is automatically scraped every 30 minutes. The app is hosted on GAE, and in case you want to use the feeds yourself, here they are (please use the feedburner ones so I can keep this running in the free tier):</p>
+<p>Content is automatically scraped every 30 minutes. The app is hosted on GAE, and in case you want to use the feeds yourself, here they are:</p>
 
 <table>
 <thead><tr>
