--- a/index.html
+++ b/index.html
@@ -39,39 +39,39 @@
 </tr></thead>
 <tbody>
 <tr>
-<td>HN items reaching 10 points</td>
+<td>HN - 10+ points</td>
 <td><a href="http://feeds.feedburner.com/hn10points"><img src="http://feeds.feedburner.com/%7Efc/hn10points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="hn10points"></a></td>
 </tr>
 <tr>
-<td>HN items reaching 50 points</td>
+<td>HN - 50+ points</td>
 <td><a href="http://feeds.feedburner.com/hn50points"><img src="http://feeds.feedburner.com/%7Efc/hn50points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="hn50points"></a></td>
 </tr>
 <tr>
-<td>HN items reaching 100 points</td>
+<td>HN - 100+ points</td>
 <td><a href="http://feeds.feedburner.com/hn100points"><img src="http://feeds.feedburner.com/%7Efc/hn100points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="hn100points"></a></td>
 </tr>
 <tr>
-<td>Ask HN items reaching 10 points</td>
+<td>Ask HN - 10+ points</td>
 <td><a href="http://feeds.feedburner.com/askhn10points"><img src="http://feeds.feedburner.com/%7Efc/askhn10points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="askhn10points"></a></td>
 </tr>
 <tr>
-<td>Ask HN items reaching 50 points</td>
+<td>Ask HN - 50+ points</td>
 <td><a href="http://feeds.feedburner.com/askhn50points"><img src="http://feeds.feedburner.com/%7Efc/askhn50points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="askhn50points"></a></td>
 </tr>
 <tr>
-<td>Ask HN items reaching 100 points</td>
+<td>Ask HN - 100+ points</td>
 <td><a href="http://feeds.feedburner.com/askhn100points"><img src="http://feeds.feedburner.com/%7Efc/askhn100points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="askhn100points"></a></td>
 </tr>
 <tr>
-<td>Show HN items reaching 10 points</td>
+<td>Show HN - 10+ points</td>
 <td><a href="http://feeds.feedburner.com/showhn10points"><img src="http://feeds.feedburner.com/%7Efc/showhn10points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="showhn10points"></a></td>
 </tr>
 <tr>
-<td>Show HN items reaching 50 points</td>
+<td>Show HN - 50+ points</td>
 <td><a href="http://feeds.feedburner.com/showhn50points"><img src="http://feeds.feedburner.com/%7Efc/showhn50points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="showhn50points"></a></td>
 </tr>
 <tr>
-<td>Show HN items reaching 100 points</td>
+<td>Show HN - 100+ points</td>
 <td><a href="http://feeds.feedburner.com/showhn100points"><img src="http://feeds.feedburner.com/%7Efc/showhn100points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="showhn100points"></a></td>
 </tr>
 </tbody>
@@ -82,39 +82,39 @@
 </tr></thead>
 <tbody>
 <tr>
-<td>HN items reaching 10 comments</td>
+<td>HN - 10+ comments</td>
 <td><a href="http://feeds.feedburner.com/hn10comments"><img src="http://feeds.feedburner.com/%7Efc/hn10comments?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="hn10comments"></a></td>
 </tr>
 <tr>
-<td>HN items reaching 50 comments</td>
+<td>HN - 50+ comments</td>
 <td><a href="http://feeds.feedburner.com/hn50comments"><img src="http://feeds.feedburner.com/%7Efc/hn50comments?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="hn50comments"></a></td>
 </tr>
 <tr>
-<td>HN items reaching 100 comments</td>
+<td>HN - 100+ comments</td>
 <td><a href="http://feeds.feedburner.com/hn100comments"><img src="http://feeds.feedburner.com/%7Efc/hn100comments?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="hn100comments"></a></td>
 </tr>
 <tr>
-<td>Ask HN items reaching 10 comments</td>
+<td>Ask HN - 10+ comments</td>
 <td><a href="http://feeds.feedburner.com/askhn10comments"><img src="http://feeds.feedburner.com/%7Efc/askhn10comments?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="askhn10comments"></a></td>
 </tr>
 <tr>
-<td>Ask HN items reaching 50 comments</td>
+<td>Ask HN - 50+ comments</td>
 <td><a href="http://feeds.feedburner.com/askhn50comments"><img src="http://feeds.feedburner.com/%7Efc/askhn50comments?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="askhn50comments"></a></td>
 </tr>
 <tr>
-<td>Ask HN items reaching 100 comments</td>
+<td>Ask HN - 100+ comments</td>
 <td><a href="http://feeds.feedburner.com/askhn100comments"><img src="http://feeds.feedburner.com/%7Efc/askhn100comments?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="askhn100comments"></a></td>
 </tr>
 <tr>
-<td>Show HN items reaching 10 comments</td>
+<td>Show HN - 10+ comments</td>
 <td><a href="http://feeds.feedburner.com/showhn10comments"><img src="http://feeds.feedburner.com/%7Efc/showhn10comments?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="showhn10comments"></a></td>
 </tr>
 <tr>
-<td>Show HN items reaching 50 comments</td>
+<td>Show HN - 50+ comments</td>
 <td><a href="http://feeds.feedburner.com/showhn50comments"><img src="http://feeds.feedburner.com/%7Efc/showhn50comments?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="showhn50comments"></a></td>
 </tr>
 <tr>
-<td>Show HN items reaching 100 comments</td>
+<td>Show HN - 100+ comments</td>
 <td><a href="http://feeds.feedburner.com/showhn100comments"><img src="http://feeds.feedburner.com/%7Efc/showhn100comments?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="showhn100comments"></a></td>
 </tr>
 </tbody>
@@ -125,15 +125,15 @@
 </tr></thead>
 <tbody>
 <tr>
-<td>Posts reaching 10 comments</td>
+<td>Posts - 10+ comments</td>
 <td><a href="http://feeds.feedburner.com/bogleheads10"><img src="http://feeds.feedburner.com/%7Efc/bogleheads10?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="bogleheads10"></a></td>
 </tr>
 <tr>
-<td>Posts reaching 50 comments</td>
+<td>Posts - 50+ comments</td>
 <td><a href="http://feeds.feedburner.com/bogleheads50"><img src="http://feeds.feedburner.com/%7Efc/bogleheads50?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="bogleheads50"></a></td>
 </tr>
 <tr>
-<td>Posts reaching 100 comments</td>
+<td>Posts - 100+ comments</td>
 <td><a href="http://feeds.feedburner.com/bogleheads100"><img src="http://feeds.feedburner.com/%7Efc/bogleheads100?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="bogleheads100"></a></td>
 </tr>
 </tbody>
