Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Hacker News RSS feeds</title>
+    <title>RSSify by gianlucaborello</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -49,6 +49,14 @@
 <tr>
 <td>HN - 100+ points</td>
 <td><a href="http://feeds.feedburner.com/hn100points"><img src="http://feeds.feedburner.com/%7Efc/hn100points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="hn100points"></a></td>
+</tr>
+<tr>
+<td>HN - 250+ points</td>
+<td><a href="http://feeds.feedburner.com/hn250points"><img src="http://feeds.feedburner.com/%7Efc/hn250points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="hn250points"></a></td>
+</tr>
+<tr>
+<td>HN - 500+ points</td>
+<td><a href="http://feeds.feedburner.com/hn500points"><img src="http://feeds.feedburner.com/%7Efc/hn500points?bg=99ccff&amp;amp;fg=444444&amp;amp;anim=0" alt="hn500points"></a></td>
 </tr>
 <tr>
 <td>Ask HN - 10+ points</td>
